k8s/test-environment/deploy-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "PR${CIRCLE_PULL_REQUEST##*/}-${CIRCLE_PROJECT_REPONAME}"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gz-web
  namespace: "PR${CIRCLE_PULL_REQUEST##*/}-${CIRCLE_PROJECT_REPONAME}"
  labels:
    app: gz-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gz-web
  template:
    metadata:
      labels:
        app: gz-web
    spec:
      containers:
      - name: django-backend
        image: geekzone/backend:0.1.${CIRCLE_PREVIOUS_BUILD_NUM}
      - name: frontend-proxy
        image: geekzone/frontend:0.1.${CIRCLE_PREVIOUS_BUILD_NUM}
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: gz-web-service
  namespace: "PR${CIRCLE_PULL_REQUEST##*/}-${CIRCLE_PROJECT_REPONAME}"
  annotations:
    external-dns.alpha.kubernetes.io/hostname: PR${CIRCLE_PULL_REQUEST##*/}.${CIRCLE_PROJECT_REPONAME}.test.geek.zone
#    external-dns.alpha.kubernetes.io/ttl: "120" #optional
spec:
  type: ClusterIP
  selector:
    app: gz-web
  ports:
  - port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: "PR${CIRCLE_PULL_REQUEST##*/}-${CIRCLE_PROJECT_REPONAME}"
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      name: postgres
  template:
    metadata:
      labels:
       name: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:11.2
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: PR$"PR${CIRCLE_PULL_REQUEST##*/}-${CIRCLE_PROJECT_REPONAME}"
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    name: postgres

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-gz-web
  namespace: "PR${CIRCLE_PULL_REQUEST##*/}-${CIRCLE_PROJECT_REPONAME}"
  annotations:
    nginx.ingress.kubernetes.io/app-root: /memberships/register 
#    nginx.ingress.kubernetes.io/default-backend: nginx-custom-default-backend 
#    nginx.ingress.kubernetes.io/custom-http-errors: "404,415"
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules: 
    - host: PR${CIRCLE_PULL_REQUEST##*/}.${CIRCLE_PROJECT_REPONAME}.test.geek.zone
      http:
        paths:
          - path: /
            backend:
              serviceName: gz-web-service 
              servicePort: 80
